--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./*"]
+  "include": ["src", "**/*.ts", "**/*.tsx"]
 }
